# mulle-time

./: .gitignore  .touch  CMakeLists.txt  LICENSE  README.md  RELEASENOTES.md  clib.json  package.json
.github/workflows/: semgrep.yml
.mulle/etc/env/: environment-global.sh  environment-project.sh
.mulle/etc/sourcetree/: config
.mulle/share/sde/: extension
assets/dox/: TOC.md
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Libraries.cmake  _Resources.cmake  _Sources.cmake
cola/: description.md.bud  info.md.bud  properties.plist
src/: mulle-absolutetime.h  mulle-relativetime.h  mulle-time.h  mulle-timespec.c  mulle-timespec.h  mulle-timetype.h  mulle-timeval.h
test/: include.h
test/.mulle/etc/env/: environment-host-ci-prerelease.sh  environment-project.sh
test/.mulle/etc/sourcetree/: config
test/.mulle/share/sourcetree/: config
test/10_timeval/: add.c
test/11_timespec/: add.c
